[package]
name = "bittorrent_lite"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
libp2p = { version = "0.56.0", features = ["tokio", "tcp", "noise", "yamux", "mdns", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
